--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generate trusted local SSL/TLS certificates for local SSL development",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": "dist/bin.js",
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
@@ -30,6 +31,8 @@
     "typescript": "^2.7.0"
   },
   "dependencies": {
+    "@types/shelljs": "^0.8.0",
+    "@types/yargs": "^11.0.0",
     "@types/configstore": "^2.1.1",
     "@types/debug": "^0.0.30",
     "@types/get-port": "^3.2.0",
@@ -49,10 +52,14 @@
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "password-prompt": "^1.0.4",
+    "read": "^1.0.7",
     "rimraf": "^2.6.2",
+    "shelljs": "^0.8.2",
     "sudo-prompt": "^8.2.0",
     "tmp": "^0.0.33",
-    "tslib": "^1.8.1"
+    "ts-node": "^6.0.5",
+    "tslib": "^1.8.1",
+    "yargs": "^11.0.0"
   },
   "optionalDependencies": {}
 }
